--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "init": "^0.1.2",
