--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "scripts": {
@@ -44,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "install": "^0.13.0",
     "tailwindcss": "^3.4.1"
   }
 }
