--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.15.9",
     "@mui/x-data-grid": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@tremor/react": "^3.13.4",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "init": "^0.1.2",
